<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:orientation="vertical" >
        <RelativeLayout android:id="@+id/RelativeLayout01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <com.wonderkiln.camerakit.CameraView
                android:id="@+id/camera_view"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@id/event_cam"
                android:layout_above="@+id/k3"
                >
            </com.wonderkiln.camerakit.CameraView>

            <com.example.camerafacedetection.Helper.GraphicOverlay
                android:id="@+id/graphic_overlay"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@id/event_cam"
                android:layout_above="@+id/k3"
                />

            <Button
                android:id="@+id/detect_face_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:enabled="true"
                android:text="@string/detect_face"
                />
            <Button
                android:id="@+id/change_cam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/detect_face_btn"
                android:enabled="true"
                android:onClick="OnClickChangeCam"
                android:text="@string/front"
                />
            <Button
                android:id="@+id/clip"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:enabled="false"
                android:text="@string/clip"
                android:textSize="12sp"
                />
            <Button
                android:id="@+id/take_pic"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/clip"
                android:enabled="false"
                android:text="@string/take_pic"
                android:textSize="12sp"
                />
            <Button
                android:id="@+id/event_cam"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/take_pic"
                android:enabled="false"
                android:text="@string/event_cam"
                android:textSize="12sp"
                />

            <EditText
                android:id="@+id/k1"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_k1"
                android:layout_toLeftOf="@+id/k2"
                android:layout_above="@+id/send"
                android:inputType="number"/>
            <EditText
                android:id="@+id/k2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_k2"
                android:layout_above="@+id/send"
                android:layout_toLeftOf="@+id/k3"
                android:inputType="number"/>
            <EditText
                android:id="@+id/k3"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_k3"
                android:layout_above="@+id/send"
                android:layout_centerHorizontal="true"
                android:inputType="number"/>
            <EditText
                android:id="@+id/c"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_c"
                android:layout_above="@+id/send"
                android:layout_toRightOf="@+id/k3"
                android:inputType="number" />
            <EditText
                android:id="@+id/d"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_d"
                android:layout_above="@+id/send"
                android:layout_toRightOf="@+id/c"
                android:inputType="number"/>
            <Button
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/start"
                android:enabled="false"
                android:onClick="OnClickStart" />
            <Button
                android:id="@+id/connect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:onClick="OnClickConnent"
                android:layout_above="@+id/disconnect"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@+id/send"
                android:text="@string/connect" />
            <Button
                android:id="@+id/disconnect"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:onClick="OnClickDisonnent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/send"
                android:text="@string/disconnect" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>